--- a/src/index.html
+++ b/src/index.html
@@ -25,22 +25,22 @@
       </nav>
     </header>
     <main class="main">
-      <ul class="contacts">
-        <li><a href="/#giris">Onwin Giriş</a></li>
-        <li><a href="/#bahis">Onwin Bahis</a></li>
-        <li><a href="/#casino">Onwin Casino</a></li>
-        <li><a href="/#guvenilir">Onwin Güvenilir mi?</a></li>
-        <li><a href="/#bonus">Onwin Bonusları</a></li>
-        <li><a href="/#finansal">Onwin Finansal İşlemler</a></li>
-        <li><a href="/#yatirma">Onwin Para Yatırma</a></li>
-        <li><a href="/#cekme">Onwin Para Çekme</a></li>
-        <li><a href="/#mobil">Onwin Mobil</a></li>
-        <li><a href="/#destek">Onwin Canlı Destek</a></li>
-        <li><a href="/#tm">Onwin Telegram</a></li>
-        <li><a href="/#mail">Onwin Mail Destek</a></li>
-        <li><a href="/#watsapp">Onwin Watsapp</a></li>
-        <li><a href="/#uyelik">Onwin Üyelik</a></li>
-    </ul>
+      <div class="contacts__container">
+        <ul class="contacts">
+          <li><a href="#giris">Onwin Giriş</a></li>
+          <li><a href="#guvenilir">Onwin Güvenilir mi?</a></li>
+          <li><a href="#bonus">Onwin Bonusları</a></li>
+          <li><a href="#finansal">Onwin Finansal İşlemler</a></li>
+          <li><a href="#yatirma">Onwin Para Yatırma</a></li>
+          <li><a href="#cekme">Onwin Para Çekme</a></li>
+          <li><a href="#destek">Onwin Canlı Destek</a></li>
+          <li><a href="#tm">Onwin Telegram</a></li>
+          <li><a href="#mail">Onwin Mail Destek</a></li>
+          <li><a href="#watsapp">Onwin Watsapp</a></li>
+          <li><a href="#uyelik">Onwin Üyelik</a></li>
+        </ul>
+        <img src="images/homepage.jpg" alt="homepage">
+      </div>
       <h1>Onwin</h1>
       <p>Onwin, çevrimiçi bir bahis ve casino platformudur. Geniş bir spor bahisleri seçeneği 
         sunar ve popüler casino oyunlarına erişim sağlar. Güvenilir bir lisansa sahip olan 
@@ -102,30 +102,28 @@
           direkt olarak bahis keyfini sürme gibi bir eylem içerisinde olurlar
         </p>
         <h2 id=’’giris”>Onwin Giriş</h2>
-        <p>Onwin sanal bahis sitesine giriş işlemleri için bazı detaylar özelinde mutlaka dikkatli 
-          olunması gerekir ve bu detaylar ise aşağıdakiler gibidir:
-        </p>
-        <ul class="main__list">
-          <li>İlk olarak giriş işlemleri adına mutlaka güncel bir giriş adresine sahip olmanız 
-            gerekir. Güvenilir giriş adresi temini için de yine aynı şekilde güvenilir 
-            kaynaklara sahip olmanız büyük önem taşır.
-          </li>
-          <li>Giriş işlemleri konusunda yatırımcıların sitemiz gibi temel bir kaynaktan 
-            yararlanmalarında herhangi bir sakınca yoktur. 
-          </li>
-          <li>Onwin giriş adresi temini konusunda önem taşıyan seçeneklerden bir diğer ise
-            sosyal medya kanallarıdır. Bu sosyal medya kanallarından da adres temini 
-            sağlamanız mümkün olabilir.
-          </li>
-          <li>Tüm bunların yanı sıra siteye kayıt olurken kullanmış olduğunuz e-posta 
-            adresine ve cep telefonu numarasına da giriş adresi konusunda birçok 
-            seçenek sunulacaktır. Bu yöntem özelinde de giriş adresi temini sağlamanız 
-            mümkün olabilir.
-          </li>
-          <li>Ayrıca son olarak mobil giriş gibi en güvenilir giriş yöntemlerini de kullanarak 
-            giriş işlemlerini gerçekleştirmeniz söz konusu olabilir.
-          </li>
-        </ul>
+        <div class="giris__container">
+          <img src="images/giris.png" alt="giris">
+          <div>
+            <p >Onwin sanal bahis sitesine giriş işlemleri için bazı detaylar özelinde mutlaka dikkatli olunması gerekir ve bu detaylar ise aşağıdakiler gibidir:</p>
+            <ul class="main__list">
+              <li>İlk olarak giriş işlemleri adına mutlaka güncel bir giriş adresine sahip olmanız 
+                gerekir. Güvenilir giriş adresi temini için de yine aynı şekilde güvenilir 
+                kaynaklara sahip olmanız büyük önem taşır.</li>
+              <li>Giriş işlemleri konusunda yatırımcıların sitemiz gibi temel bir kaynaktan 
+                yararlanmalarında herhangi bir sakınca yoktur. </li>
+              <li>Onwin giriş adresi temini konusunda önem taşıyan seçeneklerden bir diğer ise
+                sosyal medya kanallarıdır. Bu sosyal medya kanallarından da adres temini 
+                sağlamanız mümkün olabilir.</li>
+              <li>Tüm bunların yanı sıra siteye kayıt olurken kullanmış olduğunuz e-posta 
+                adresine ve cep telefonu numarasına da giriş adresi konusunda birçok 
+                seçenek sunulacaktır. Bu yöntem özelinde de giriş adresi temini sağlamanız 
+                mümkün olabilir.</li>
+              <li>Ayrıca son olarak mobil giriş gibi en güvenilir giriş yöntemlerini de kullanarak 
+                giriş işlemlerini gerçekleştirmeniz söz konusu olabilir.</li>
+            </ul>
+          </div>
+        </div>
         <p>Onwin'e giriş yapmak için aşağıdaki adımları takip edebilirsiniz:</p>
         <ol class="main__list numbers__list">
           <li>Onwin'in resmi web sitesine gidin.</li>
@@ -195,6 +193,7 @@
           kullanıcılarının çeşitli bahis tercihlerini karşılayacak bir platform sunar ve spor 
           bahisleri tutkunları için heyecan verici bir deneyim sunar.
         </p>
+        <img src="images/Onwin_mobil_desktop.jpg" alt="mobile version" class="center_image mobile_image">
         <h2 id=’’casino”>Onwin Casino</h2>
         <p>Onwin Casino, çeşitli oyun türlerini içeren geniş bir kumarhane deneyimi sunar. İşte 
           Onwin Casino'da bulunan başlıca oyun türleri:
@@ -215,6 +214,7 @@
           <li>Masa Oyunları: Texas Hold'em, Omaha ve daha fazlası gibi farklı poker 
             türlerinde rakiplere karşı oynayabilirsiniz.</li>
         </ol>
+        <img src="images/Onwin_mobil.jpg" alt="mobile version" class="center_image mobile_image">
         <p>Onwin Casino ayrıca en iyi casino sağlayıcılarından bazılarıyla işbirliği yapmaktadır. 
           Bu sağlayıcılar, oyunların kalitesini ve çeşitliliğini artırır. Öne çıkan casino 
           sağlayıcıları arasında NetEnt, Microgaming, Evolution Gaming, Play'n GO, ve 
@@ -222,9 +222,12 @@
           güvenilir bir çevrimiçi platformda oynama fırsatına sahiptirler.
         </p>
         <h2 id=’’guvenilir”>Onwin Güvenilir mi?</h2>
-        <p>Onwin, güvenilir bir bahis platformu olarak değerlendirilir ve bunun birkaç nedeni 
-          vardır. İşte Onwin'in güvenilirliğini sağlayan bazı önemli noktalar:
-        </p>
+        <div class="image__container">
+          <p>Onwin, güvenilir bir bahis platformu olarak değerlendirilir ve bunun birkaç nedeni 
+            vardır. İşte Onwin'in güvenilirliğini sağlayan bazı önemli noktalar:
+          </p>
+          <img src="images/Onwin_lisans_mobile.jpg" alt="mobile lisans" class="mobile_lisans">
+        </div>
         <ol class="main__list numbers__list">
           <li>Lisans: Onwin, Curacao Hükümeti tarafından verilen bir oyun lisansına 
             sahiptir. Bu lisans, siteyi düzenli olarak denetlenen ve güvenilir bir çevrimiçi 
@@ -331,6 +334,7 @@
           </tr>
         </tbody>
         </table>
+        <img src="images/Onwin_bonus.jpg" alt="bonus" class="center_image">
         <h2 id=”finansal”>Onwin Finansal İşlemler</h2>
         <p>Firmanın güvenilir olduğunu gösteren en önemli detaylardan biri yatırımcıların direkt 
           olarak para yatırma veya para çekme konusunda birden fazla çeşidinin olmasıdır. 
@@ -381,6 +385,7 @@
           Saniyelik dahi olsa herhangi bir yatırım fırsatını kaçırmanızı istemeyen Onwin, bu 
           nedenle para yatırma konusunda son derece kapsamlı bir hizmete sahiptir.
         </p>
+        <img src="images/Onwin_yatirma.png" alt="yatirma" class="center_image">
         <p>Firma tarafından üyelere sağlanan yatırım seçenekleri ise aşağıdaki gibidir:</p>
         <ul class="main__list">
           <li>Banka EFT/havale/FAST gibi yöntemlerle para yatırma</li>
@@ -406,7 +411,7 @@
           <li>QR ile çekim</li>
           <li>CepBank ile çekim</li>
         </ul>
-        <h3 id=”cekme”>Onwin Para Çekme</h3>
+        <img src="images/Onwin_cekme.png" alt="cekme" class="center_image">
       <p>Onwin firmasının iletişim konusunda son derece gelişmiş bir firma olduğu bilinen bir 
         gerçektir ve bu nedenle yatırımcılar, bu firmaya bu denli büyük bir güven 
         beslemektedirler. Firmanın iletişim anlamında sağlamış olduğu birçok seçenek 
@@ -444,53 +449,66 @@
           <td class="table__element last__table__element">Mobil Tarayıcı ile Kullanım</td>
         </tr>
       </table>
-      <p>Onwin, hem iOS hem de Android işletim sistemleri için özel mobil uygulamalara 
-        sahiptir. Bu uygulamaları cihazınıza indirip kurarak daha hızlı erişim ve daha yüksek 
-        bir stabilite elde edebilirsiniz. Mobil uygulama, kullanıcıların bahis yaparken veya 
-        casino oyunları oynarken daha rahat bir deneyim yaşamalarına olanak tanır.
-      </p>
-      <p>Ayrıca, Onwin'in mobil sürümü tarayıcı üzerinden kullanılabilir. Bu, herhangi bir mobil
-        cihazla erişim sağlamanızı mümkün kılar. Mobil site, tarayıcı tabanlıdır ve herhangi 
-        bir indirme gerektirmez, bu da kullanıcılara daha fazla esneklik sağlar.
-      </p>
-      <p>Her iki seçenek de kullanıcıların hesaplarına erişim, para yatırma ve çekme işlemleri,
-        bahis yapma ve canlı casino oyunlarına katılma gibi temel işlevleri 
-        gerçekleştirmelerine olanak tanır. Kısacası, Onwin, mobil bahis severlerin 
-        ihtiyaçlarını karşılayacak bir dizi seçenek sunar ve mobil cihazlarınızla dilediğiniz 
-        zaman ve yerde bahis yapmanızı sağlar.
-      </p>
+      <div class="image__container">
+        <img src="images/Onwin_lisans_desktop.jpg" alt="desktop lisans">
+        <div>
+          <p>Onwin, hem iOS hem de Android işletim sistemleri için özel mobil uygulamalara 
+            sahiptir. Bu uygulamaları cihazınıza indirip kurarak daha hızlı erişim ve daha yüksek 
+            bir stabilite elde edebilirsiniz. Mobil uygulama, kullanıcıların bahis yaparken veya 
+            casino oyunları oynarken daha rahat bir deneyim yaşamalarına olanak tanır.
+          </p>
+          <p>Ayrıca, Onwin'in mobil sürümü tarayıcı üzerinden kullanılabilir. Bu, herhangi bir mobil
+            cihazla erişim sağlamanızı mümkün kılar. Mobil site, tarayıcı tabanlıdır ve herhangi 
+            bir indirme gerektirmez, bu da kullanıcılara daha fazla esneklik sağlar.
+          </p>
+          <p>Her iki seçenek de kullanıcıların hesaplarına erişim, para yatırma ve çekme işlemleri,
+            bahis yapma ve canlı casino oyunlarına katılma gibi temel işlevleri 
+            gerçekleştirmelerine olanak tanır. Kısacası, Onwin, mobil bahis severlerin 
+            ihtiyaçlarını karşılayacak bir dizi seçenek sunar ve mobil cihazlarınızla dilediğiniz 
+            zaman ve yerde bahis yapmanızı sağlar.
+          </p>
+        </div>
+      </div>
       <h2 id=”destek”>Onwin Canlı Destek</h2>
-      <p>Canlı destek, yatırımcıların en çok tercih etmiş oldukları iletişim kanalı olarak bilinir. 
-        Bu iletişim kanalı sayesinde yatırımcıların herhangi bir problem yaşamdan kısa süre 
-        içerisinde Onwin ile iletişim kurmaları söz konusu olur. Sadece birkaç adımda hangi 
-        konu hakkında destek alacağınız konusunda canlı destek penceresinde seçim 
-        yapmanız yeterli olacaktır.
-      </p>
-      <h3 id=”tm”>Onwin Telegram</h3>
-      <p>Telegram da yatırımcılar tarafından tercih edilen iletişim kanallarından biridir. 
-        Yatırımcılar Telegram üzerinden Onwin ile hem iletişim kurmaktadırlar hem de direkt 
-        olarak firmaya dair en son gelişmelerden haberdar olurlar. Giriş adresleri, yeni 
-        bonuslar, yeni yatırım seçenekleri ve iletişim gibi birçok konu, Telegram üzerinden 
-        hızlı bir şekilde ilerler.
-      </p>
-      <h3 id=”mail”>Onwin Mail Destek</h3>
-      <p>Onwin’in en çok tercih edilen iletişim kanallarından bir diğeri ise mail üzerinden 
-        destektir. Direkt olarak destek@onwin.com isimli e-posta adresi ile Onwin’le iletişime
-        geçmeniz söz konusu olacaktır. Atacağınız her açıklayıcı mail, direkt olarak cevap 
-        alacak ve en kısa sürede tarafınıza dönüş yapılacaktır. 
-      </p>
-      <h3 id=”watsapp”>Onwin Watsapp</h3>
-      <p>Whatsapp duyuru ve iletişim kanalı olan ender firmalardan biri olan Onwin, bu 
-        platform üzerinden de yatırımcılarıyla 7/24 iletişim halinde olan bir firmadır. Bu 
-        nedenle herhangi bir problem yaşamadan yatırım işlemlerinin gerçekleştirilmesi söz 
-        konusu olur. İletişim anlık olarak sağlanır ve yatırımcılar her konuda bilgi sahibi 
-        olarak, yatırımlarını çok daha kendilerinden emin bir şekilde yürütebilirler.
-      </p>
-      <h2 id=”uyelik”>Onwin Üyelik</h2>
-      <p>Onwin firmasının üyelik işlemleri temel olarak 4 adımdan oluşmaktadır. Bu adımlar 
-        ise aşağıdaki gibi yatırımcıların karşılarına çıkacaktır. Temel olarak üyelik işlemleri 
-        şu şekilde ilerler:
-      </p>
+      <div class="support__container">
+        <p class="main__paragraph">Canlı destek, yatırımcıların en çok tercih etmiş oldukları iletişim kanalı olarak bilinir. 
+          Bu iletişim kanalı sayesinde yatırımcıların herhangi bir problem yaşamdan kısa süre 
+          içerisinde Onwin ile iletişim kurmaları söz konusu olur. Sadece birkaç adımda hangi 
+          konu hakkında destek alacağınız konusunda canlı destek penceresinde seçim 
+          yapmanız yeterli olacaktır.
+        </p>
+        <img src="images/onwin_support.png" alt="support">
+      </div>
+      <div class="image__container">
+        <img src="images/Onwin_destek.png" alt="destek" class="destek">
+        <div>
+          <h3 id=”tm”>Onwin Telegram</h3>
+          <p>Telegram da yatırımcılar tarafından tercih edilen iletişim kanallarından biridir. 
+            Yatırımcılar Telegram üzerinden Onwin ile hem iletişim kurmaktadırlar hem de direkt 
+            olarak firmaya dair en son gelişmelerden haberdar olurlar. Giriş adresleri, yeni 
+            bonuslar, yeni yatırım seçenekleri ve iletişim gibi birçok konu, Telegram üzerinden 
+            hızlı bir şekilde ilerler.
+          </p>
+          <h3 id=”mail”>Onwin Mail Destek</h3>
+          <p>Onwin’in en çok tercih edilen iletişim kanallarından bir diğeri ise mail üzerinden 
+            destektir. Direkt olarak destek@onwin.com isimli e-posta adresi ile Onwin’le iletişime
+            geçmeniz söz konusu olacaktır. Atacağınız her açıklayıcı mail, direkt olarak cevap 
+            alacak ve en kısa sürede tarafınıza dönüş yapılacaktır. 
+          </p>
+          <h3 id=”watsapp”>Onwin Watsapp</h3>
+          <p>Whatsapp duyuru ve iletişim kanalı olan ender firmalardan biri olan Onwin, bu 
+            platform üzerinden de yatırımcılarıyla 7/24 iletişim halinde olan bir firmadır. Bu 
+            nedenle herhangi bir problem yaşamadan yatırım işlemlerinin gerçekleştirilmesi söz 
+            konusu olur. İletişim anlık olarak sağlanır ve yatırımcılar her konuda bilgi sahibi 
+            olarak, yatırımlarını çok daha kendilerinden emin bir şekilde yürütebilirler.
+          </p>
+          <h2 id=”uyelik”>Onwin Üyelik</h2>
+          <p>Onwin firmasının üyelik işlemleri temel olarak 4 adımdan oluşmaktadır. Bu adımlar 
+            ise aşağıdaki gibi yatırımcıların karşılarına çıkacaktır. Temel olarak üyelik işlemleri 
+            şu şekilde ilerler:
+          </p>
+        </div>
+      </div>
       <ol class="main__list numbers__list">
         <li>İlk adımda ön kayıt adımı yer alır ve bu adımda yatırımcılar direkt olarak, 
           temel üyelik bilgilerini belirtirler.</li>
