--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,9 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Onwin - Bahis ve Casino Platformudur ✔️ Güncel Giriş Adresi 2023</title>
+    <title>Onwin - Türkiye’nin Önde Gelen Bahis ve Casino Sitesi</title>
     <meta name="robots" content="noarchive">
-    <meta name="description" content="Onwin yeni giriş adresi 2023 - üzerinden engelsiz, hızlı ve güvenli giriş yapabilirsiniz. Hoşgeldin bonusu: 2500 TL!" />
+    <meta name="description" content="Onwin, Türkiye’deki kullanıcılara zengin oyun seçenekleri ve spor bahisleri sunan güvenilir bir platformdur. Hemen kaydolun ve kazanmaya başlayın!" />
     <link rel="stylesheet" href="./styles/main.css">
     <link rel="shortcut icon" href="images/favicon.svg" type="image/x-icon">
   </head>
@@ -39,7 +39,8 @@
           <li><a href="#watsapp">Onwin Watsapp</a></li>
           <li><a href="#uyelik">Onwin Üyelik</a></li>
         </ul>
-        <img src="images/homepage.jpg" alt="homepage">
+        <img src="images/homepage.png" alt="homepage" class="homepage_desktop">
+        <img src="images/homepage_mobile.png" alt="homepage" class="homepage_mobile">
       </div>
       <h1>Onwin</h1>
       <p>Onwin, çevrimiçi bir bahis ve casino platformudur. Geniş bir spor bahisleri seçeneği 
@@ -103,7 +104,7 @@
         </p>
         <h2 id=’’giris”>Onwin Giriş</h2>
         <div class="giris__container">
-          <img src="images/giris.png" alt="giris">
+          <img src="images/giris_desktop.png" alt="giris" class="desktop">
           <div>
             <p >Onwin sanal bahis sitesine giriş işlemleri için bazı detaylar özelinde mutlaka dikkatli olunması gerekir ve bu detaylar ise aşağıdakiler gibidir:</p>
             <ul class="main__list">
@@ -193,7 +194,8 @@
           kullanıcılarının çeşitli bahis tercihlerini karşılayacak bir platform sunar ve spor 
           bahisleri tutkunları için heyecan verici bir deneyim sunar.
         </p>
-        <img src="images/Onwin_mobil_desktop.jpg" alt="mobile version" class="center_image mobile_image">
+        <img src="images/Onwin_bahis_desktop.jpg" alt="bahis " class="center_image desktop">
+        <img src="images/Onwin_bahis_mobile.jpg" alt="bahis" class="center_image bahis_image mobile">
         <h2 id=’’casino”>Onwin Casino</h2>
         <p>Onwin Casino, çeşitli oyun türlerini içeren geniş bir kumarhane deneyimi sunar. İşte 
           Onwin Casino'da bulunan başlıca oyun türleri:
@@ -214,7 +216,8 @@
           <li>Masa Oyunları: Texas Hold'em, Omaha ve daha fazlası gibi farklı poker 
             türlerinde rakiplere karşı oynayabilirsiniz.</li>
         </ol>
-        <img src="images/Onwin_mobil.jpg" alt="mobile version" class="center_image mobile_image">
+        <img src="images/Onwin_casino_desktop.jpg" alt="casino" class="center_image desktop">
+        <img src="images/Onwin_casino_mobile.jpg" alt="casino" class="center_image mobile">
         <p>Onwin Casino ayrıca en iyi casino sağlayıcılarından bazılarıyla işbirliği yapmaktadır. 
           Bu sağlayıcılar, oyunların kalitesini ve çeşitliliğini artırır. Öne çıkan casino 
           sağlayıcıları arasında NetEnt, Microgaming, Evolution Gaming, Play'n GO, ve 
@@ -222,37 +225,39 @@
           güvenilir bir çevrimiçi platformda oynama fırsatına sahiptirler.
         </p>
         <h2 id=’’guvenilir”>Onwin Güvenilir mi?</h2>
+        <p>Onwin, güvenilir bir bahis platformu olarak değerlendirilir ve bunun birkaç nedeni 
+          vardır. İşte Onwin'in güvenilirliğini sağlayan bazı önemli noktalar:
+        </p>
         <div class="image__container">
-          <p>Onwin, güvenilir bir bahis platformu olarak değerlendirilir ve bunun birkaç nedeni 
-            vardır. İşte Onwin'in güvenilirliğini sağlayan bazı önemli noktalar:
-          </p>
-          <img src="images/Onwin_lisans_mobile.jpg" alt="mobile lisans" class="mobile_lisans">
+          <div>
+            <ol class="main__list numbers__list">
+              <li>Lisans: Onwin, Curacao Hükümeti tarafından verilen bir oyun lisansına 
+                sahiptir. Bu lisans, siteyi düzenli olarak denetlenen ve güvenilir bir çevrimiçi 
+                bahis platformu haline getirir.
+              </li>
+              <li>Veri Güvenliği: Onwin, kullanıcılarının kişisel ve finansal bilgilerini korumak 
+                için modern SSL şifreleme teknolojilerini kullanır. Bu sayede müşteri verileri 
+                güvende tutulur.
+              </li>
+              <li>Oyun Sağlayıcıları: Onwin, dünya çapında tanınmış ve saygın oyun 
+                sağlayıcıları ile işbirliği yapar. Bu, oyunların adil ve güvenilir olduğu anlamına 
+                gelir.
+              </li>
+              <li>Müşteri Hizmetleri: Onwin, müşteri memnuniyetine önem verir ve 7/24 
+                müşteri hizmetleri sunar. Kullanıcılar herhangi bir sorunla karşılaştıklarında 
+                profesyonel destek alabilirler.
+              </li>
+              <li>Güvenilir Ödeme Yöntemleri: Onwin, güvenilir ödeme seçenekleri sunar ve 
+                kullanıcıların hızlı ve güvenli bir şekilde para yatırma ve çekme işlemleri 
+                yapmalarına olanak tanır.
+              </li>
+              <li>Adil Oyun: Onwin, adil oyun prensiplerine bağlı kalır ve tüm oyunlar için 
+                rastgele sayı üreteci (RNG) kullanır.
+              </li>
+            </ol>
+          </div>
+          <img src="images/Onwin_lisans_mobile.jpg" alt="mobil" class="mobile_lisans">
         </div>
-        <ol class="main__list numbers__list">
-          <li>Lisans: Onwin, Curacao Hükümeti tarafından verilen bir oyun lisansına 
-            sahiptir. Bu lisans, siteyi düzenli olarak denetlenen ve güvenilir bir çevrimiçi 
-            bahis platformu haline getirir.
-          </li>
-          <li>Veri Güvenliği: Onwin, kullanıcılarının kişisel ve finansal bilgilerini korumak 
-            için modern SSL şifreleme teknolojilerini kullanır. Bu sayede müşteri verileri 
-            güvende tutulur.
-          </li>
-          <li>Oyun Sağlayıcıları: Onwin, dünya çapında tanınmış ve saygın oyun 
-            sağlayıcıları ile işbirliği yapar. Bu, oyunların adil ve güvenilir olduğu anlamına 
-            gelir.
-          </li>
-          <li>Müşteri Hizmetleri: Onwin, müşteri memnuniyetine önem verir ve 7/24 
-            müşteri hizmetleri sunar. Kullanıcılar herhangi bir sorunla karşılaştıklarında 
-            profesyonel destek alabilirler.
-          </li>
-          <li>Güvenilir Ödeme Yöntemleri: Onwin, güvenilir ödeme seçenekleri sunar ve 
-            kullanıcıların hızlı ve güvenli bir şekilde para yatırma ve çekme işlemleri 
-            yapmalarına olanak tanır.
-          </li>
-          <li>Adil Oyun: Onwin, adil oyun prensiplerine bağlı kalır ve tüm oyunlar için 
-            rastgele sayı üreteci (RNG) kullanır.
-          </li>
-        </ol>
         <p>Onwin'in bu faktörlerin birleşimi, kullanıcılarına güvenilir ve güvenli bir oyun deneyimi
           sunar. Bu, siteye olan güveni artırır ve birçok oyuncu için tercih edilen bir çevrimiçi 
           bahis platformu yapar.
@@ -334,7 +339,8 @@
           </tr>
         </tbody>
         </table>
-        <img src="images/Onwin_bonus.jpg" alt="bonus" class="center_image">
+        <img src="images/Onwin_bonus_desktop.png" alt="bonus" class="center_image desktop">
+        <img src="images/Onwin_bonus_mobile.png" alt="bonus" class="center_image mobile">
         <h2 id=”finansal”>Onwin Finansal İşlemler</h2>
         <p>Firmanın güvenilir olduğunu gösteren en önemli detaylardan biri yatırımcıların direkt 
           olarak para yatırma veya para çekme konusunda birden fazla çeşidinin olmasıdır. 
@@ -378,6 +384,7 @@
           birimleriyle 7/24 direkt olarak yatırımcılara destek olurlar. Haliyle bu durum sürecin 
           çok daha ciddi bir şekilde hızlanmasına neden olmaktadır. 
         </p>
+        <img src="images/payments.png" alt="payments" class="center_image">
         <h3 id=”yatirma”>Onwin Para Yatırma</h3>
         <p>Onwin, para yatırma işlemleriniz için siz değerli yatırımcılara onlarca seçenek sunar. 
           Hatta aynı para yatırma kanalından birden fazla seçenek sunduğu da görülür. Tüm 
@@ -385,7 +392,8 @@
           Saniyelik dahi olsa herhangi bir yatırım fırsatını kaçırmanızı istemeyen Onwin, bu 
           nedenle para yatırma konusunda son derece kapsamlı bir hizmete sahiptir.
         </p>
-        <img src="images/Onwin_yatirma.png" alt="yatirma" class="center_image">
+        <img src="images/Onwin_yatirma_desktop.png" alt="yatirma" class="center_image desktop">
+        <img src="images/Onwin_yatirma_mobile.png" alt="yatirma" class="center_image mobile">
         <p>Firma tarafından üyelere sağlanan yatırım seçenekleri ise aşağıdaki gibidir:</p>
         <ul class="main__list">
           <li>Banka EFT/havale/FAST gibi yöntemlerle para yatırma</li>
@@ -411,7 +419,8 @@
           <li>QR ile çekim</li>
           <li>CepBank ile çekim</li>
         </ul>
-        <img src="images/Onwin_cekme.png" alt="cekme" class="center_image">
+        <img src="images/Onwin_cekme_desktop.png" alt="cekme" class="center_image desktop">
+        <img src="images/Onwin_cekme_mobile.png" alt="cekme" class="center_image mobile">
       <p>Onwin firmasının iletişim konusunda son derece gelişmiş bir firma olduğu bilinen bir 
         gerçektir ve bu nedenle yatırımcılar, bu firmaya bu denli büyük bir güven 
         beslemektedirler. Firmanın iletişim anlamında sağlamış olduğu birçok seçenek 
@@ -450,7 +459,7 @@
         </tr>
       </table>
       <div class="image__container">
-        <img src="images/Onwin_lisans_desktop.jpg" alt="desktop lisans">
+        <img src="images/Onwin_mobil.jpg" alt="mobil">
         <div>
           <p>Onwin, hem iOS hem de Android işletim sistemleri için özel mobil uygulamalara 
             sahiptir. Bu uygulamaları cihazınıza indirip kurarak daha hızlı erişim ve daha yüksek 
@@ -479,7 +488,7 @@
         </p>
         <img src="images/onwin_support.png" alt="support">
       </div>
-      <div class="image__container">
+      <div class="image__container destek__container">
         <img src="images/Onwin_destek.png" alt="destek" class="destek">
         <div>
           <h3 id=”tm”>Onwin Telegram</h3>
