--- a/src/index.html
+++ b/src/index.html
@@ -459,7 +459,7 @@
         </tr>
       </table>
       <div class="image__container">
-        <img src="images/Onwin_mobil.jpg" alt="mobil">
+        <img src="images/Onwin_mobil.jpg" alt="mobil" class="mobil_image">
         <div>
           <p>Onwin, hem iOS hem de Android işletim sistemleri için özel mobil uygulamalara 
             sahiptir. Bu uygulamaları cihazınıza indirip kurarak daha hızlı erişim ve daha yüksek 
@@ -486,7 +486,7 @@
           konu hakkında destek alacağınız konusunda canlı destek penceresinde seçim 
           yapmanız yeterli olacaktır.
         </p>
-        <img src="images/onwin_support.png" alt="support">
+        <img src="images/onwin_support.png" alt="support" class="support">
       </div>
       <div class="image__container destek__container">
         <img src="images/Onwin_destek.png" alt="destek" class="destek">
