--- a/src/index.html
+++ b/src/index.html
@@ -384,7 +384,7 @@
           birimleriyle 7/24 direkt olarak yatırımcılara destek olurlar. Haliyle bu durum sürecin 
           çok daha ciddi bir şekilde hızlanmasına neden olmaktadır. 
         </p>
-        <img src="images/payments.png" alt="payments" class="center_image">
+        <img src="images/payments.png" alt="payments" class="center_image payments">
         <h3 id=”yatirma”>Onwin Para Yatırma</h3>
         <p>Onwin, para yatırma işlemleriniz için siz değerli yatırımcılara onlarca seçenek sunar. 
           Hatta aynı para yatırma kanalından birden fazla seçenek sunduğu da görülür. Tüm 
@@ -431,36 +431,36 @@
       <p>Onwin, mobil cihazlarda bahis yapmayı seven kullanıcıları unutmuyor ve bir dizi 
         mobil seçenek sunuyor. İşte Onwin Mobil hakkında bazı önemli bilgiler:
       </p>
-      <table>
-        <tr class="table-row">
-          <td class="table__element last__table__element"><strong>Mobil İşletim Sistemi</strong></td>
-          <td class="table__element last__table__element"><strong>Uygulama Durumu</strong></td>
-          <td class="table__element last__table__element"><strong>Mobil Site Özellikleri</strong></td>
-        </tr>
-        <tr class="table-row">
-          <td class="table__element last__table__element">iOS (iPhone/iPad)</td>
-          <td class="table__element last__table__element">Uygulama Mevcut</td>
-          <td class="table__element last__table__element">Hızlı Erişim, Stabilite</td>
-        </tr>
-        <tr class="table-row">
-          <td class="table__element last__table__element">Android</td>
-          <td class="table__element last__table__element">Uygulama Mevcut</td>
-          <td class="table__element last__table__element">Hızlı Erişim, Stabilite</td>
-        </tr>
-        <tr class="table-row">
-          <td class="table__element last__table__element">Windows Phone</td>
-          <td class="table__element last__table__element">Uygulama Yok</td>
-          <td class="table__element last__table__element">Mobil Tarayıcı ile Kullanım</td>
-        </tr>
-        <tr class="table-row">
-          <td class="table__element last__table__element">Diğerleri</td>
-          <td class="table__element last__table__element">Uygulama Yok</td>
-          <td class="table__element last__table__element">Mobil Tarayıcı ile Kullanım</td>
-        </tr>
-      </table>
       <div class="image__container">
         <img src="images/Onwin_mobil.jpg" alt="mobil" class="mobil_image">
         <div>
+          <table class="mobil_table">
+            <tr class="table-row">
+              <td class="table__element last__table__element"><strong>Mobil İşletim Sistemi</strong></td>
+              <td class="table__element last__table__element"><strong>Uygulama Durumu</strong></td>
+              <td class="table__element last__table__element"><strong>Mobil Site Özellikleri</strong></td>
+            </tr>
+            <tr class="table-row">
+              <td class="table__element last__table__element">iOS (iPhone/iPad)</td>
+              <td class="table__element last__table__element">Uygulama Mevcut</td>
+              <td class="table__element last__table__element">Hızlı Erişim, Stabilite</td>
+            </tr>
+            <tr class="table-row">
+              <td class="table__element last__table__element">Android</td>
+              <td class="table__element last__table__element">Uygulama Mevcut</td>
+              <td class="table__element last__table__element">Hızlı Erişim, Stabilite</td>
+            </tr>
+            <tr class="table-row">
+              <td class="table__element last__table__element">Windows Phone</td>
+              <td class="table__element last__table__element">Uygulama Yok</td>
+              <td class="table__element last__table__element">Mobil Tarayıcı ile Kullanım</td>
+            </tr>
+            <tr class="table-row">
+              <td class="table__element last__table__element">Diğerleri</td>
+              <td class="table__element last__table__element">Uygulama Yok</td>
+              <td class="table__element last__table__element">Mobil Tarayıcı ile Kullanım</td>
+            </tr>
+          </table>
           <p>Onwin, hem iOS hem de Android işletim sistemleri için özel mobil uygulamalara 
             sahiptir. Bu uygulamaları cihazınıza indirip kurarak daha hızlı erişim ve daha yüksek 
             bir stabilite elde edebilirsiniz. Mobil uygulama, kullanıcıların bahis yaparken veya 
@@ -480,17 +480,13 @@
       </div>
       <h2 id=”destek”>Onwin Canlı Destek</h2>
       <div class="support__container">
-        <p class="main__paragraph">Canlı destek, yatırımcıların en çok tercih etmiş oldukları iletişim kanalı olarak bilinir. 
-          Bu iletişim kanalı sayesinde yatırımcıların herhangi bir problem yaşamdan kısa süre 
-          içerisinde Onwin ile iletişim kurmaları söz konusu olur. Sadece birkaç adımda hangi 
-          konu hakkında destek alacağınız konusunda canlı destek penceresinde seçim 
-          yapmanız yeterli olacaktır.
-        </p>
-        <img src="images/onwin_support.png" alt="support" class="support">
-      </div>
-      <div class="image__container destek__container">
-        <img src="images/Onwin_destek.png" alt="destek" class="destek">
         <div>
+          <p class="main__paragraph">Canlı destek, yatırımcıların en çok tercih etmiş oldukları iletişim kanalı olarak bilinir. 
+            Bu iletişim kanalı sayesinde yatırımcıların herhangi bir problem yaşamdan kısa süre 
+            içerisinde Onwin ile iletişim kurmaları söz konusu olur. Sadece birkaç adımda hangi 
+            konu hakkında destek alacağınız konusunda canlı destek penceresinde seçim 
+            yapmanız yeterli olacaktır.
+          </p>
           <h3 id=”tm”>Onwin Telegram</h3>
           <p>Telegram da yatırımcılar tarafından tercih edilen iletişim kanallarından biridir. 
             Yatırımcılar Telegram üzerinden Onwin ile hem iletişim kurmaktadırlar hem de direkt 
@@ -498,6 +494,12 @@
             bonuslar, yeni yatırım seçenekleri ve iletişim gibi birçok konu, Telegram üzerinden 
             hızlı bir şekilde ilerler.
           </p>
+        </div>
+        <img src="images/onwin_support.png" alt="support" class="support">
+      </div>
+      <div class="image__container destek__container">
+        <img src="images/Onwin_destek.png" alt="destek" class="destek">
+        <div>
           <h3 id=”mail”>Onwin Mail Destek</h3>
           <p>Onwin’in en çok tercih edilen iletişim kanallarından bir diğeri ise mail üzerinden 
             destektir. Direkt olarak destek@onwin.com isimli e-posta adresi ile Onwin’le iletişime
