--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
         </a>
       </div>
       <nav class="header__menu">
-        <ul id="menu-top" class="menu">
+        <ul id="menu-top" class="menu_buttons">
           <li id="menu-item-45" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-2 current_page_item menu-item-45"><span><a href="/">Kayıt ol</a></span></li>
           <li id="menu-item-5159" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-5159"><a href="/">Giriş yap</a></li>
         </ul>
@@ -431,9 +431,9 @@
       <p>Onwin, mobil cihazlarda bahis yapmayı seven kullanıcıları unutmuyor ve bir dizi 
         mobil seçenek sunuyor. İşte Onwin Mobil hakkında bazı önemli bilgiler:
       </p>
-      <div class="image__container">
+      <div class="image__container mobil__container">
         <img src="images/Onwin_mobil.jpg" alt="mobil" class="mobil_image">
-        <div>
+        <div class="table_container">
           <table class="mobil_table">
             <tr class="table-row">
               <td class="table__element last__table__element"><strong>Mobil İşletim Sistemi</strong></td>
@@ -531,9 +531,57 @@
           çekme gibi konularda çok daha konforlu bir şekilde hareket etmeleri söz 
           konusu olur.</li>
       </ol>
+      <section class="section">
+        <h2 id='sss' class="questions">
+          SSS
+        </h2>
+        <div class="dropdown">
+          <div class="select">
+            <span class="selected" >Bir bahisten maksimum ne kadar kazanabilirim?</span>
+            <div class="caret"></div>
+          </div>
+          <ul class="menu dropdown__list">
+            <li class="dropdown__element">
+              <div class="caret caret-rotate"></div>
+              <p>
+                Onwin'de bahisten maksimum kazanç miktarı, bahis türüne, etkinin oranına ve site politikalarına bağlı olarak değişebilir. Genellikle her bahis türü için belirli bir maksimum kazanç sınırı bulunur, bu nedenle kazançlarınız bahis türünüze ve oranına göre farklılık gösterebilir.
+              </p>
+            </li>
+          </ul>
+        </div>
+        <div class="dropdown">
+          <div class="select">
+            <span class="selected" >Hesabımdaki parayı çekmek istiyorum. Nasıl talepte bulunacağım?</span>
+            <div class="caret"></div>
+          </div>
+          <ul class="menu dropdown__list">
+            <li class="dropdown__element">
+              <div class="caret caret-rotate"></div>
+              <p>
+                Onwin'de hesabınızdaki parayı çekmek için, öncelikle hesabınıza giriş yapmalı ve \"Para Çekme\" veya benzeri bir seçeneği seçmelisiniz. Daha sonra çekmek istediğiniz miktarı ve ödeme yöntemini seçerek talebinizi oluşturabilirsiniz. Talebiniz, site politikalarına göre işleme alınacaktır.
+              </p>
+            </li>
+          </ul>
+        </div>
+        <div class="dropdown">
+          <div class="select">
+            <span class="selected" >Onwin Bet'in bir uygulaması var mı?</span>
+            <div class="caret"></div>
+          </div>
+          <ul class="menu dropdown__list">
+            <li class="dropdown__element">
+              <div class="caret caret-rotate"></div>
+              <p>
+                Onwin, mobil cihazlar için optimize edilmiş bir web sitesi sunmaktadır, ancak bağımsız bir uygulaması bulunmamaktadır. Mobil tarayıcınızı kullanarak siteye erişebilir ve mobil cihazlarınızda bahis yapabilirsiniz.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
     <footer class="footer">
       <p class="footer-copy">Tüm haklara ve koşullara saygı duyulur. Onwin © 2023</p>
     </footer>
+    <script type="text/javascript" src="./scripts/main.js"></script>
   </body>
 </html>
