--- a/src/index.html
+++ b/src/index.html
@@ -19,8 +19,8 @@
       </div>
       <nav class="header__menu">
         <ul id="menu-top" class="menu_buttons">
-          <li id="menu-item-45" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-2 current_page_item menu-item-45"><span><a href="/">Kayıt ol</a></span></li>
-          <li id="menu-item-5159" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-5159"><a href="/">Giriş yap</a></li>
+          <li id="menu-item-45" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-2 current_page_item menu-item-45"><span><a target="_blank" rel="nofollow" href="/">Kayıt ol</a></span></li>
+          <li id="menu-item-5159" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-5159"><a href="/" target="_blank" rel="nofollow">Giriş yap</a></li>
         </ul>
       </nav>
     </header>
